I changed the edit button to "answer"

--- a/IS 403 Project2/Views/MissionQuestions/Index.cshtml
+++ b/IS 403 Project2/Views/MissionQuestions/Index.cshtml
@@ -41,7 +41,7 @@
             @Html.DisplayFor(modelItem => item.answer)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.missionQuestionID }) |
+            @Html.ActionLink("Answer", "Edit", new { id=item.missionQuestionID }) |
             @Html.ActionLink("Details", "Details", new { id=item.missionQuestionID }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.missionQuestionID })
         </td>
