--- a/IS 403 Project2/Views/MissionQuestions/Index.cshtml
+++ b/IS 403 Project2/Views/MissionQuestions/Index.cshtml
@@ -39,6 +39,7 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.answer)
+      <!--making an unnecessary edit to see if i can get git hub - drex 12/12/18-->
         </td>
         <td>
             @Html.ActionLink("Answer", "Edit", new { id=item.missionQuestionID }) |
